  * Support being used in a git repository that uses sha256 rather than sha1.
  * initremote, enableremote: Be stricter about rejecting invalid
    configuration parameters for remotes, particularly things like foo=true
    when foo=yes is expected.
  * initremote, enableremote: Reject unknown configuration parameters
    provided to these commands.
  * initremote: Added --describe-other-params option, to show additional
    configuration parameters you might want to set.
  * Added LISTCONFIGS to external special remote protocol. Special remote
    programs that use GETCONFIG/SETCONFIG are recommended to implement it.

 -- Joey Hess <id@joeyh.name>  Wed, 01 Jan 2020 12:51:40 -0400

git-annex (7.20191230) upstream; urgency=medium

  * Optimised processing of many files, especially by commands like find
    and whereis that only report on the state of the repository. Commands
    like get also sped up in cases where they have to check a lot of
    files but only transfer a few files. Speedups range from 30-100%.
  * Added build dependency on the filepath-bytestring library.
  * Fixed an oversight that had always prevented annex.resolvemerge
    from being honored, when it was configured by git-annex config.
  * annex.largefiles can be configured by git-annex config,
    to more easily set a default that will also be used by clones,
    without needing to shoehorn the expression into the gitattributes file.
    The git config and gitattributes override that.
  * annex.addunlocked can be set to an expression with the same format used by
    annex.largefiles, when you want to default to unlocking some files but
    not others.
  * annex.addunlocked can be configured by git-annex config.
  * git-annex-config --set/--unset: No longer change the local git config
    setting, except for in the special case of annex.securehashesonly.
  * Improve file ordering behavior when one parameter is "." and other
    parameters are other directories.