@@ -10,8 +10,8 @@ and indeed I get asked for e.g. encryption to be explicitly specified (why not t
 [[!meta author=yoh]]
 [[!tag projects/datalad]]
 
-> [[done]] as eg `git annex initremote type=rsync --describe-other-params`.
+> [[done]] as eg `git annex initremote type=rsync --whatelse`.
 > 
 > External special remotes that implement LISTCONFIGS can also be queried:
 > 
-> 	git annex inittype type=external externaltype=foo --describe-other-params
+> 	git annex inittype type=external externaltype=foo --whatelse
